[metadata]
name = mara-db
version = attr: mara_db.__version__
url = https://github.com/mara/mara-db
description = Configuration and monitoring of database connections
long_description = file: README.md
long_description_content_type = text/markdown
author = Mara contributors
license = MIT

[options]
packages = mara_db
python_requires = >= 3.6

[options.package_data]
mara_db = static/*
