[metadata]
name = mara-db
version = attr: mara_db.__version__
url = https://github.com/mara/mara-db
description = Configuration and monitoring of database connections
long_description = file: README.md
long_description_content_type = text/markdown
author = Mara contributors
license = MIT

[options]
packages = mara_db
python_requires = >= 3.8
install_requires =
    SQLAlchemy>=1.1.5
    sqlalchemy-utils>=0.32.14
    alembic>=0.8.10
    multimethod>=1.0.0
    graphviz>=0.8
    mara-page>=1.3.0
    psycopg2-binary>=2.7.3

[options.package_data]
mara_db = static/*

[options.extras_require]
test =
    pytest
    pytest_click
    pytest-docker
    pytest-dependency
    SQLAlchemy>=1.2.0
bigquery =
    google-cloud-bigquery
    google-cloud-bigquery-storage
    pyarrow
    sqlalchemy-bigquery
mssql = pyodbc
mysql = mysqlclient
postgres = psycopg2-binary>=2.7.3
redshift =
    psycopg2-binary>=2.7.3
    sqlalchemy-redshift
snowflake = snowflake-sqlalchemy
databricks =
    databricks-sql-cli
    databricks-sql-connector
    sqlalchemy-databricks
